--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.jvmargs=-Xmx2G
 
-# Fabric Properties (https://fabricmc.net/develop)
-minecraft_version=1.19.4
-yarn_mappings=1.19.4+build.2
-loader_version=0.14.19
+# Fabric Properties (https://fabricmc.net/versions.html)
+minecraft_version=1.19.3
+yarn_mappings=1.19.3+build.3
+loader_version=0.14.11
 
 # Mod Properties
 mod_version=0.1.0
@@ -12,5 +12,5 @@ archives_base_name=addon-template
 
 # Dependencies
 
-# Meteor (https://maven.meteordev.org)
-meteor_version=0.5.3-SNAPSHOT
+# Meteor (https://maven.meteordev.org/)
+meteor_version=0.5.2-SNAPSHOT
